Properly quote filenames given to dpkg, or else filenames containing spaces will be improperly truncated, causing dpkg to fail.

BUG:290510